--- a/style.css
+++ b/style.css
@@ -38,3 +38,54 @@
               color: gray;background-color: white;
               border: .5px solid gray;
        }
+       @media (max-width:600px) and (max-width:768){
+        body{
+         padding: 0;
+         margin: 0;
+        }
+        .main-heading{
+            text-align: center;
+        }
+        .main-container{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+        .member-container{
+            width: 70% ;
+        }
+        .member-container{
+            width: 100px;
+            height: auto;
+        }
+        .member-container img{
+            width: 100%;
+            height: auto;
+        }
+        }
+        @media (min-width:600px) and (max-width:768){
+            body{
+            padding: 0;
+            margin: 0;
+            }
+            .main-heading{
+                text-align: center;
+            }
+            .main-container{
+                display: flex;
+                flex-wrap: wrap;
+            }
+        }
+        @media (min-width:768px) and (max-width:920px){
+            body{
+            padding: 0;
+            margin: 0;
+            }
+            .main-heading{
+            text-align: center;
+            }
+            .main-container{
+            display: flex;
+            flex-wrap: wrap;
+            }
+        }
