--- a/Responsive team/style.css
+++ b/Responsive team/style.css
@@ -38,7 +38,7 @@
               color: gray;background-color: white;
               border: .5px solid gray;
        }
-       @media (max-width:600px) and (max-width:768){
+       @media (max-width:600px) {
         body{
          padding: 0;
          margin: 0;
